// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Location Tabs Renders Location Tabs with Mock Data 1`] = `
<React.Fragment>
  <LocationHeader
    details="1 [missing \\"en.LOCATION.ITEMS\\" translation], 1 [missing \\"en.LOCATION.PALLETS\\" translation]"
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      name="[missing \\"en.LOCATION.FLOORS\\" translation] (1)"
    >
      [Function]
    </Screen>
    <Screen
      name="[missing \\"en.LOCATION.RESERVES\\" translation] (1)"
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Renders Location Tabs with Mock Empty Data 1`] = `
<React.Fragment>
  <LocationHeader
    details="0 [missing \\"en.LOCATION.ITEMS\\" translation], 0 [missing \\"en.LOCATION.PALLETS\\" translation]"
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      name="[missing \\"en.LOCATION.FLOORS\\" translation] (0)"
    >
      [Function]
    </Screen>
    <Screen
      name="[missing \\"en.LOCATION.RESERVES\\" translation] (0)"
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Renders Location Tabs with Mock Large Location Data 1`] = `
<React.Fragment>
  <LocationHeader
    details="100 [missing \\"en.LOCATION.ITEMS\\" translation], 100 [missing \\"en.LOCATION.PALLETS\\" translation]"
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      name="[missing \\"en.LOCATION.FLOORS\\" translation] (100)"
    >
      [Function]
    </Screen>
    <Screen
      name="[missing \\"en.LOCATION.RESERVES\\" translation] (100)"
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;
